# pomodoro-time

./: .gitignore  Makefile  alembic.ini  dependency.py  docker-compose.yml  exceptions.py  pyproject.toml  settings.py
alembic/versions/: 18f52eaf2ebf_create_tables_tasks_categories.py  204e934b5d5d_fixed_user_profile_table.py  2394a9b5b8b8_add_user_id_in_tasks.py  3820d23691b7_remove_access_token_from_user_model.py  59821c2d2b31_category_type.py  8f7de9aa1dd1_added_user_profile_table.py  9f41a429e374_new_fields_in_user.py  ae7efcb2c3e7_upd_userprofile.py  c35e5221f5d8_added_yandex_access_token.py
cache/: accessor.py
client/: google.py  yandex.py
database/: database.py  models.py
handlers/: auth.py  ping.py  tasks.py  users.py
models/: __init__.py  tasks.py  users.py
repository/: __init__.py  cache_task.py  tasks.py  users.py
schemas/: __init__.py  auth.py  tasks.py  users.py
service/: __init__.py  auth.py  tasks.py  users.py
